# python-template

./: .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
app/: app.py
