[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Lucho Leves <lucianoleves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pre-commit = "^2.12.0"
pdbpp = "^0.10.2"
bpython = "^0.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
